--- a/Day_1/cgi101.html
+++ b/Day_1/cgi101.html
@@ -5,7 +5,7 @@
     <title>Interactive Page</title>
 </head>
 <body>
-<form method="post" action="cgi_bin/cgi101.py">
+<form method="post" action="cgi_bin/cgi101">
     <p><b>Enter your name:</b></p>
     <p><input type="text" name="user"></p>
     <p><input type="submit"></p>
